# Tilde-Deploy

./: README.md
Fyp/Code/: Readme.txt
Fyp/Code/deploy/: .gitignore  README.md  compose.yaml
Fyp/Code/deploy/backend/: Cargo.toml  Dockerfile
Fyp/Code/deploy/backend/config/: production.json
Fyp/Code/deploy/backend/src/: main.rs
Fyp/Code/deploy/backend/src/api/: health.rs
Fyp/Code/deploy/backend/src/utils/: mod.rs
Fyp/Code/deploy/backend/src/utils/database/: db.rs
Fyp/Code/deploy/backend/src/utils/deployment/: deploy.rs  deployments.rs  mod.rs
Fyp/Code/deploy/backend/src/utils/s3_bucket_handler/: s3_handler.rs
Fyp/Code/deploy/backend/src/utils/settings/: app_config.rs  cloudprovider.rs  mod.rs
Fyp/Code/deploy/backend/src/utils/terraform/: mod.rs  terraform_handler.rs
Fyp/Code/deploy/backend/src/utils/user/: check_auth.rs  login_func.rs  mod.rs  signup_func.rs
Fyp/Code/deploy/deployment/compose/: adguard.compose.yaml  calibre-web.compose.yml  pihole.compose.yaml  uptime-kuma.compose.yaml  vaultwarden.compose.yaml  wg-easy.compose.yaml
Fyp/Code/deploy/deployment/scripts/: compose-up.sh
Fyp/Code/deploy/deployment/scripts/env/: base.sh  docker.sh
Fyp/Code/deploy/deployment/terraform/hetzner/: main.tf  variables.tf
Fyp/Code/deploy/frontend/: Dockerfile  dev.Dockerfile  next.config.js  package-lock.json  package.json  theme.ts
Fyp/Code/deploy/frontend/src/app/: ClientRootLayout.tsx  layout.tsx  middleware.ts
Fyp/Code/deploy/frontend/src/components/: AuthGate.tsx  button.tsx
Fyp/Code/deploy/frontend/src/constants/: constants.ts
(+30 files in other folders)
