[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

mongodb = "2.8"
bson = "2"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"

aws-sdk-s3 = "1.13.0"
aws-config = "1.8.3"

futures-util = "0.3"
futures = "0.3.31"

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = "0.3"

regex = "1.11.1"

chrono = { version = "0.4.41", features = ["serde"] }

uuid = { version = "1.14", features = ["v4"] }

env_logger = "0.11.6"
log = "0.4.25"

bcrypt = "0.17.0"
async-recursion = "1.1.1"
